# multigrid-pde-solver

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: scaling_benchmark.cpp
include/common/: matrix.hpp
include/cpu/: fd_discretizer.hpp  smoothers.hpp
include/solvers/: multigrid.hpp
include/utils/: logger.hpp  timer.hpp
results/: scaling_data.csv
scripts/: plot_scaling.py
src/common/: matrix.cpp
src/cpu/: fd_discretizer.cpp  smoothers.cpp
src/solvers/: multigrid.cpp
src/utils/: logger.cpp  timer.cpp
tests/: test_mg_2d.cpp
